--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,10 @@
 <h2 id="title">Ember Ace Editor</h2>
 
+<style>
+  .ace-editor {
+    height: 400px;
+    width: 400px;
+  }
+</style>
+
 {{ace-editor content=css}}
